# instagram-apis-rs

./: Cargo.toml
instagram-basic-display-api/: Cargo.toml  README.md
instagram-basic-display-api/demo/: Cargo.toml
instagram-basic-display-api/demo/src/: exchange_sl_access_token_for_ll_access_token.rs  me.rs  refresh_access_token.rs  user_access_token_simple.rs  user_medias.rs
instagram-basic-display-api/src/: lib.rs
instagram-basic-display-api/src/objects/: account_type.rs  api_version.rs  media.rs  mod.rs  paging.rs  response_error_body.rs  user.rs
instagram-basic-display-api/src/operations/: common.rs  exchange_sl_access_token_for_ll_access_token.rs  mod.rs  refresh_access_token.rs  user.rs  user_medias.rs
instagram-basic-display-api/src/types/: access_token.rs  mod.rs
instagram-basic-display-api/tests/response_body_files/: README.md  err__1.json  err__2.json  err__3.json  exchange_sl_access_token_for_ll_access_token_err__400.json  exchange_sl_access_token_for_ll_access_token_ok.json  me_err__400.json  me_with_media_ok.json  me_with_private_account_ok.json  me_without_media_ok.json  refresh_access_token_ok.json  user_medias_ok.json  user_medias_ok__limit_1.json
instagram-graph-api/: Cargo.toml  README.md
instagram-graph-api/src/: lib.rs
instagram-graph-api/src/objects/: err_json.rs  ig_comment.rs  ig_container.rs  ig_media.rs  ig_user.rs  mod.rs
instagram-graph-api/src/operations/: common.rs  mod.rs
instagram-graph-api/src/operations/ig_comment/: deleting.rs  mod.rs  reading.rs  updating.rs
instagram-graph-api/src/operations/ig_comment/replies/: creating.rs  mod.rs
instagram-graph-api/src/operations/ig_container/: reading.rs
instagram-graph-api/src/operations/ig_media/: mod.rs  updating.rs
instagram-graph-api/src/operations/ig_media/comments/: creating.rs  mod.rs  reading.rs
instagram-graph-api/src/operations/ig_user/: mod.rs
instagram-graph-api/src/operations/ig_user/business_discovery/: mod.rs  reading.rs
instagram-graph-api/src/operations/ig_user/media/: creating.rs
instagram-graph-api/src/operations/ig_user/media_publish/: creating.rs
instagram-graph-api/tests/response_body_json_files/v14.0/: README.md  err__access_token_invalid_1.json  err__ig_user_0__business_discovery__reading__not_business.json  err__ig_user_0__business_discovery__reading__not_exists.json  err__ig_user_0__media__creating__image_aspect_ratio_invalid.json  err__ig_user_0__media__creating__image_url_invalid.json  err__ig_user_0__media__creating__reels_account_not_allowed.json  err__ig_user_0__media__creating__usertag_username_private.json  ig_comment_0__reading__bulk.json  ig_comment_17857647179815901__reading.json  ig_comment_17897793971532270__replies__creating.json  ig_media_17946328927974136__comments__creating.json  ig_media_17946328927974136__comments__reading.json  ig_user_0__business_discovery__reading__username_bluebottle.json  ig_user_0__business_discovery__reading__username_qq122755990.json  ig_user_0__media__creating__carousel.json  ig_user_0__media__creating__image.json  ig_user_0__media__creating__video.json  ig_user_0__media_publish__creating_sample.json
