[package]
name = "instagram-basic-display-api"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Instagram Basic Display API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-apis-rs"
homepage = "https://github.com/bk-rs/instagram-apis-rs"
documentation = "https://docs.rs/instagram-basic-display-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
