[package]
name = "instagram-basic-display-api"
version = "0.2.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Instagram Basic Display API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-apis-rs"
homepage = "https://github.com/bk-rs/instagram-apis-rs"
documentation = "https://docs.rs/instagram-basic-display-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
serde-aux = { version = "4", default-features = false }
serde-enum-str = { version = "0.2", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
url = { version = "2.3", default-features = false }
percent-encoding = { version = "2.2", default-features = false }
wrapping-macro = { version = "0.1", default-features = false }

instagram-link = { version = "0.1", default-features = false }
facebook-graph-api-object-error = { version = "0.1.1", default-features = false }
facebook-graph-api-object-paging = { version = "0.1", default-features = false }

thiserror = { version = "1", default-features = false }
