[package]
name = "instagram-graph-api"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Instagram Graph API"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/instagram-apis-rs"
homepage = "https://github.com/bk-rs/instagram-apis-rs"
documentation = "https://docs.rs/instagram-graph-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
facebook-graph-api-object-paging = { version = "0.1", default-features = false }
facebook-graph-api-object-error = { version = "0.2", default-features = false }

http-api-client-endpoint = { version = "0.2", default-features = false }

serde = { version = "1", default-features = false, features = ["std", "derive"] }
serde-aux = { version = "4", default-features = false }
url = { version = "2", default-features = false, features = ["serde"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }

wrapping-macro = { version = "0.1", default-features = false }
error-macro = { version = "0.2", default-features = false }
